--- a/index.html
+++ b/index.html
@@ -1,5 +1,116 @@
-<html>
-<body>
-<p>Hello World!</p>
-</body>
+<!DOCTYPE html>
+<html dir="ltr" lang="ja">
+	<head>
+		<meta http-equiv="pragma" content="no-cache">
+		<meta http-equiv="cache-control" content="no-cache">	 	
+		<script language="JavaScript">
+			jpURL = new Array();
+			jpURL[0] = "https://docs.google.com/forms/d/e/1FAIpQLSfu0vS3lmAIV5d_01qN_tEdx1JdFyVADlxhe8hVUJYZYgLY6g/viewform?usp=sf_link";
+			jpURL[1] = "https://docs.google.com/forms/d/e/1FAIpQLSf33Ik5bF15BVyoZHgauaJZEsxA7ROSRkUzEayyU6KdJRtwJQ/viewform?usp=sf_link";
+			jpURL[2] = "https://docs.google.com/forms/d/e/1FAIpQLSeNy_ZgdWIx5BthRrxNTIp8J1iLU10e41r_r78E7A4P0eLNfQ/viewform?usp=sf_link";
+			n = Math.floor(Math.random() * jpURL.length);
+			location.href = jpURL[n];
+		</script>
+		<script type="text/javascript">
+			var mylink = new Array(
+				"https://docs.google.com/forms/d/e/1FAIpQLSfu0vS3lmAIV5d_01qN_tEdx1JdFyVADlxhe8hVUJYZYgLY6g/viewform?usp=sf_link",
+				"https://docs.google.com/forms/d/e/1FAIpQLSf33Ik5bF15BVyoZHgauaJZEsxA7ROSRkUzEayyU6KdJRtwJQ/viewform?usp=sf_link",
+				"https://docs.google.com/forms/d/e/1FAIpQLSeNy_ZgdWIx5BthRrxNTIp8J1iLU10e41r_r78E7A4P0eLNfQ/viewform?usp=sf_link"
+			);
+			function random_jump() {
+				var i = Math.floor(Math.random() * mylink.length);
+				location.href = mylink[i];
+			}
+		</script>
+		<script type="text/javascript" src="https://koy.am/js/jquery.min.js"></script>
+		<script type="text/javascript" src="https://koy.am/js/footerFixed.js"></script>
+		<style type="text/css">
+			body { 
+				background-color:#efefef;
+			}
+			.message1 {
+				margin: 16px auto;
+				text-align: center;
+				display: block;
+				border: 1px solid #000;
+			}
+			.message1 .contents1 {
+				text-align: left;
+				display: inline-block;
+			}
+			.message2 {
+				margin: 16px auto;
+				text-align: center;
+				display: block;
+				border: 1px solid #000;
+			}
+			.message2 .contents2 {
+				text-align: left;
+				display: inline-block;
+			}
+			.message3 {
+				margin: 16px auto;
+				text-align: center;
+				display: block;
+				border: 1px solid #000;
+			}
+			.message3 .contents3 {
+				text-align: left;
+				display: inline-block;
+			}
+			p { 
+				font-family: 'Lucida Grande', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', 'Meiryo', 'メイリオ', 'sans-serif';
+				font-size: 18px;
+			}
+			p#footer {
+				text-align: center;
+				font-size: 14px;
+				margin-top: 0px;
+				margin-bottom: 0px;
+				margin-left: 40px;
+				padding-top: 0px;
+				padding-bottom: 4px;
+			}
+		</style>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>スマートフォンに関する調査 | Koy.am</title>
+		<link rel="icon" href="https://koy.am/favicon.ico">
+		<meta name="robots" content="noindex,nofollow,noarchive">
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-46663894-22"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'UA-46663894-22');
+		</script>
+	</head>
+	<body>
+		<div class="message1">
+			<p class="contents1">
+				Google フォームへ移動します。<br />
+				自動的に移動しない場合には、<a href="javascript:random_jump();">こちらを選択</a>してください。
+			</p>
+		</div>
+		<div class="message2">
+			<p class="contents2">
+				重定向你到谷歌表格。<br />
+				如果它没有自动出现，请<a href="javascript:random_jump();">点击这里</a>。
+			</p>
+		</div>
+		<div class="message3">
+			<p class="contents3">
+				Redirecting you to Google Forms.<br />
+				In case it doesn't automatically, please <a href="javascript:random_jump();">tap here</a>.
+			</p>
+		</div>
+		<div id="footer">
+			<hr width="75%">
+			<p id="footer">
+				&copy; 2020 KoyaM - <a href="https://koy.am/about/" title="About this site">このサイトについて</a> - <a href="https://koy.am/sitemaps/" title="Sitemaps">サイト･マップ</a> - <a href="https://form.run/@koya" title="Contact">お問い合わせ</a>
+			</p>
+		</div>
+	</body>
 </html>
