--- a/error/403/index.html
+++ b/error/403/index.html
@@ -68,7 +68,7 @@
 			</div>
 			<hr width="75%">
 			<p id="footer">
-				&copy; 2020 KoyaM - <a href="https://koy.am/about/" title="About this site">このサイトについて</a> - <a href="https://koy.am/sitemaps/" title="Sitemaps">サイトマップ</a> - <a href="https://koy.am/" title="Contact">お問い合わせ</a>
+				&copy; 2020 KoyaM - <a href="https://koy.am/about/" title="About this site">このサイトについて</a> - <a href="https://koy.am/sitemaps/" title="Sitemaps">サイトマップ</a> - <a href="https://form.run/@koya" title="Contact">お問い合わせ</a>
 			</p>
 		</div>
 	</body>
