--- a/index.html
+++ b/index.html
@@ -2,26 +2,7 @@
 <html dir="ltr" lang="ja">
 	<head>
 		<meta http-equiv="pragma" content="no-cache">
-		<meta http-equiv="cache-control" content="no-cache">	 	
-		<script language="JavaScript">
-			jpURL = new Array();
-			jpURL[0] = "https://docs.google.com/forms/d/e/1FAIpQLSfu0vS3lmAIV5d_01qN_tEdx1JdFyVADlxhe8hVUJYZYgLY6g/viewform?usp=sf_link";
-			jpURL[1] = "https://docs.google.com/forms/d/e/1FAIpQLSf33Ik5bF15BVyoZHgauaJZEsxA7ROSRkUzEayyU6KdJRtwJQ/viewform?usp=sf_link";
-			jpURL[2] = "https://docs.google.com/forms/d/e/1FAIpQLSeNy_ZgdWIx5BthRrxNTIp8J1iLU10e41r_r78E7A4P0eLNfQ/viewform?usp=sf_link";
-			n = Math.floor(Math.random() * jpURL.length);
-			location.href = jpURL[n];
-		</script>
-		<script type="text/javascript">
-			var mylink = new Array(
-				"https://docs.google.com/forms/d/e/1FAIpQLSfu0vS3lmAIV5d_01qN_tEdx1JdFyVADlxhe8hVUJYZYgLY6g/viewform?usp=sf_link",
-				"https://docs.google.com/forms/d/e/1FAIpQLSf33Ik5bF15BVyoZHgauaJZEsxA7ROSRkUzEayyU6KdJRtwJQ/viewform?usp=sf_link",
-				"https://docs.google.com/forms/d/e/1FAIpQLSeNy_ZgdWIx5BthRrxNTIp8J1iLU10e41r_r78E7A4P0eLNfQ/viewform?usp=sf_link"
-			);
-			function random_jump() {
-				var i = Math.floor(Math.random() * mylink.length);
-				location.href = mylink[i];
-			}
-		</script>
+		<meta http-equiv="cache-control" content="no-cache">
 		<script type="text/javascript" src="https://koy.am/js/jquery.min.js"></script>
 		<script type="text/javascript" src="https://koy.am/js/footerFixed.js"></script>
 		<style type="text/css">
@@ -62,6 +43,11 @@
 				font-family: 'Lucida Grande', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', 'Meiryo', 'メイリオ', 'sans-serif';
 				font-size: 18px;
 			}
+			#search {
+				margin-left: 20%;
+				margin-right: 20%;
+				margin-bottom: -24px;
+			}
 			p#footer {
 				text-align: center;
 				font-size: 14px;
@@ -75,38 +61,45 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>スマートフォンに関する調査 | Koy.am</title>
+		<title>お知らせ | スマートフォンに関する調査</title>
 		<link rel="icon" href="https://koy.am/favicon.ico">
 		<meta name="robots" content="noindex,nofollow,noarchive">
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-46663894-22"></script>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-46663894-23"></script>
 		<script>
 			window.dataLayer = window.dataLayer || [];
 			function gtag(){dataLayer.push(arguments);}
 			gtag('js', new Date());
 
-			gtag('config', 'UA-46663894-22');
+			gtag('config', 'UA-46663894-23');
 		</script>
 	</head>
 	<body>
 		<div class="message1">
 			<p class="contents1">
-				Google フォームへ移動します。<br />
-				自動的に移動しない場合には、<a href="javascript:random_jump();">こちらを選択</a>してください。
+				本調査は、回答の収集を終了いたしました。<br />
+				多くのご協力を賜り、誠にありがとうございました。<br />
+				本調査に関するお問い合わせは、<a href="https://form.run/@koya" title="Contact">こちら</a>にて承ります。
 			</p>
 		</div>
 		<div class="message2">
 			<p class="contents2">
-				重定向你到谷歌表格。<br />
-				如果它没有自动出现，请<a href="javascript:random_jump();">点击这里</a>。
+				該調查不再收集答复。<br />
+				非常感謝您的合作。<br />
+				如果您對此調查有任何疑問，請與<a href="https://form.run/@koya" title="Contact">我聯繫</a>。
 			</p>
 		</div>
 		<div class="message3">
 			<p class="contents3">
-				Redirecting you to Google Forms.<br />
-				In case it doesn't automatically, please <a href="javascript:random_jump();">tap here</a>.
+				This survey is no longer collecting responses.<br />
+				Thank you very much for your cooperation.<br />
+				If you have any questions about this survey, please <a href="https://form.run/@koya" title="Contact">contact me</a>. 
 			</p>
 		</div>
 		<div id="footer">
+			<div id="search">
+				<script async src="https://cse.google.com/cse.js?cx=15346626d3df3179f"></script>
+				<div class="gcse-search"></div>
+			</div>
 			<hr width="75%">
 			<p id="footer">
 				&copy; 2020 KoyaM - <a href="https://koy.am/about/" title="About this site">このサイトについて</a> - <a href="https://koy.am/sitemaps/" title="Sitemaps">サイト･マップ</a> - <a href="https://form.run/@koya" title="Contact">お問い合わせ</a>
