--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="pragma" content="no-cache">
     <meta http-equiv="cache-control" content="no-cache">
-    <meta http-equiv="refresh" content="0;url=https://form.run/@koya">
+    <meta http-equiv="refresh" content="0;url=https://form.run/@Koy">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,7 @@
   </head>
   <body>
     <p>
-      <a href="https://form.run/@koya">https://form.run/@koya</a> へ移動します
+      <a href="https://form.run/@koya">https://form.run/@Koy</a> へ移動します
     </p>
   </body>
 </html>
