--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <p>
-      <a href="https://form.run/@Koy" title="お問合せ">https://form.run/@Koy</a> へ移動します。
+      <a href="https://form.run/@Koy" title="お問合せ">https://form.run/@Koy</a> へ移動します
     </p>
   </body>
 </html>
