--- a/404.html
+++ b/404.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="ja">
-  <head>
-    <meta http-equiv="pragma" content="no-cache">
-    <meta http-equiv="cache-control" content="no-cache">
-    <meta http-equiv="refresh" content="0;url=https://form.run/@Koy">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex,nofollow,noarchive">
-  </head>
-  <body>
-    <p>
-      <a href="https://form.run/@Koy" title="お問合せ">https://form.run/@Koy</a> へ移動します
-    </p>
-  </body>
+	<head>
+		<meta http-equiv="pragma" content="no-cache">
+		<meta http-equiv="cache-control" content="no-cache">
+		<meta http-equiv="refresh" content="0;url=https://form.run/@Koy">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="robots" content="noindex,nofollow,noarchive">
+	</head>
+	<body>
+		<p>
+			<a href="https://form.run/@Koy" title="お問合せ / Contact">https://form.run/@Koy</a> へ移動します
+		</p>
+	</body>
 </html>
